--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "geist": "^1.5.1",
     "lucide-react": "^0.545.0",
     "next": "^15.5.9",
     "next-themes": "^0.4.6",
